2005-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	Set the state file path and load it. Fixes bug #73498.
	(transfer_messages_to): Updated to use journal_append()
	(refresh_info): Replay the journal here. Fixes bug #72968.
	
	* camel/camel-exchange-journal.c (exchange_entry_play_transfer):
	Removed (not used).
	(camel_exchange_journal_transfer): Removed.
	(exchange_entry_play_append): restore back the message info from the
	journal cache to the real cache.

2005-03-16  Sarfraaz Ahmed <asarfraaz@novell.com>

        * camel/camel-exchange-store.c (construct): Move back the stub creation
        code to exchange_connect and invoke connect to fix the timing issue.
        (exchange_connect) : Create a stub if it already not created.
        (exchange_get_folder) (exchange_get_trash) (exchange_get_folder_info) :
        Check if stub is created, if not then create it.
        Fixes #73673

2005-03-15 Sivaiah Nallagatla <snallagatla@novell.com>
                                                                                
        * addressbook/e-book-backend-exchange.c
        (e_book_backend_exchange_create_contact)
        (e_book_backend_exchange_modify_contact)
        (e_book_backend_exchange_remove_contacts) :
        Make sure new or modified objects are added
        to cache and deleted ones are actually deleted
        from cache.
        Fixes #73712

2005-03-15  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c (exchange_validate_user_cb): Using
	ExchangeParams structure to store the parameters values to read from
	server during user validation, and adding them to camel url.

	* lib/e2k-autoconfig.c (e2k_validate_user): Using ExchangeParams.
	(validate): If the user is validated finding "mailbox" and "owa_path"
	values. Using ExchangeParams for returning the values.

	* lib/e2k-validate.h: Defined ExchangeParams.

2005-03-15  Sarfraaz Ahmed <asarfraaz@novell.com>
