@@ -45,6 +45,7 @@ GTKDOC_LIBS =					\
 	$(top_builddir)/lib/libexchange.la	\
 	$(top_builddir)/xntlm/libxntlm.la	\
 	$(LIBEXCHANGE_LIBS)			\
+	$(KRB5_LIBS)				\
 	$(LDAP_LIBS)
 
 # Extra options to supply to gtkdoc-mkdb
