@@ -1,3 +1,9 @@
+2005-03-16  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* docs/reference/Makefile.am : Link to krb5 libs as well
+	* storage/Makefile.am : Similar
+	Fixes a build break on SuSE machines.
+
 2005-03-16  Jeffrey Stedfast  <fejj@novell.com>
 
 	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
